# nix-quadcast

./: Cargo.toml  README.md  flake.nix  gui-package.nix  module.nix  no-daemonize.patch  package.nix  qs2s-protocol-fix.patch  result  usb-reset-on-busy.patch
.github/workflows/: flakehub.yml
crates/sliglight-core/: Cargo.toml
crates/sliglight-core/src/: animations.rs  color.rs  config.rs  lib.rs  presets.rs
crates/sliglight-gui/: Cargo.toml
crates/sliglight-gui/src/: audio.rs  dbus_service.rs  engine.rs  main.rs  mic_preview.rs  screen_lock.rs  tray.rs
crates/sliglight-usb/: Cargo.toml
crates/sliglight-usb/src/: device.rs  error.rs  lib.rs  protocol.rs
docs/: i3blocks-example.sh  waybar-example.sh
docs/superpowers/plans/: 2026-03-16-sliglight-rust-rewrite.md
gui/: pyproject.toml
gui/quadcast_rgb/: animations.py  backend.py  errors.py  main.py  usb_device.py
