[workspace]
resolver = "2"
members = [
    "crates/sliglight-usb",
    "crates/sliglight-core",
    "crates/sliglight-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/htelsiz/nix-quadcast"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
