[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sliglight"
version = "0.1.0"
description = "Qt6 GUI for HyperX QuadCast RGB lighting control"
license = {text = "GPL-2.0-only"}
requires-python = ">=3.11"
dependencies = ["PySide6>=6.6", "libusb1>=3.0"]

[project.scripts]
sliglight = "quadcast_rgb.main:main"

[tool.setuptools.packages.find]
include = ["quadcast_rgb*"]

[tool.setuptools.package-data]
quadcast_rgb = ["../resources/*.svg"]
