[package]
name = "sliglight-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Animation engine and CLI for Sliglight RGB control"

[[bin]]
name = "sliglight-cli"
path = "src/bin/cli.rs"

[dependencies]
sliglight-usb = { path = "../sliglight-usb" }
log.workspace = true
env_logger.workspace = true
serde.workspace = true
confy = "0.6"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
